# mob

./: .gitignore  App.tsx  CLAUDE.md  Cargo.toml  MANIFEST.in  README.md  app.json  index.js  metro.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-python-wheels.yml  build-python-wheels.yml.disabled  core.yml  kotlin.yml  kotlin.yml.disabled  python.yml  python.yml.disabled  ruby.yml  swift.yml  typescript.yml  typescript.yml.disabled
constants/: Cosmos.ts
core/: Cargo.toml  build.rs  uniffi.toml
core/examples/: basic_usage.rs  custom_signer_README.md  execute_contract.rs  query_balance.rs  send_tokens.rs  session_key_usage.rs
core/src/: account.rs  client.rs  crypto_signer.rs  error.rs  http_transport.rs  lib.rs  mob.udl  native_rpc_client.rs  rust_signer.rs  session.rs  session_manager.rs  session_signer.rs  signer.rs  signing_strategy.rs  std_transport.rs  transaction.rs  types.rs
core/tests/: README.md  rpc_integration_test.rs  unit_tests.rs
examples/: basic_usage.rs  execute_contract.rs  query_balance.rs  send_tokens.rs  session_key_usage.rs
hooks/: useWalletClient.ts  useWasm.ts
kotlin/: .gitignore  QUICKSTART.md  README.md  TYPED_TESTS.md  build.gradle.kts  settings.gradle.kts
kotlin/examples/: BasicQuery.kt  SendTransaction.kt  kotlin_custom_signer.kt
kotlin/lib/: libmob.dylib
kotlin/scripts/: generate_bindings.sh
kotlin/src/main/kotlin/com/burnt/mob/: NativeHttpTransport.kt
kotlin/src/test/kotlin/com/burnt/mob/: IntegrationTest.kt  MobTest.kt  MobTypedTests.kt
navigation/: index.tsx
python/: .gitignore  README.md  dev.py  requirements-dev.txt
python/docs/: testing.md
python/examples/: README.md  account_query.py  basic_query.py  python_custom_signer.py  send_transaction.py
python/mob/: __init__.py
python/mob/mob/: __init__.py  libmob.dylib  mob.py  transport.py
python/scripts/: run_python_tests.sh
python/tests/: __init__.py  conftest.py  test_rpc_queries.py  test_rpc_queries.py.old
react-native/: .gitignore  expo-module.config.json  package-lock.json  package.json  tsconfig.json
react-native/android/: build.gradle.kts
react-native/android/src/main/: AndroidManifest.xml
react-native/android/src/main/java/com/burnt/mob/: MobModule.kt
react-native/ios/: KeychainSigner.swift  MobModule.podspec  MobModule.swift
react-native/src/: MobModule.ts  MobProvider.tsx  index.ts  types.ts
react-native/src/hooks/: index.ts  useAbstraxionAccount.ts  useAbstraxionClient.ts  useAbstraxionSigningClient.ts
react-native/src/session/: DashboardAuth.ts  SessionManager.ts
ruby/: .gitignore  QUICKSTART.md  README.md  TYPED_TESTS.md
ruby/examples/: account_query.rb  basic_query.rb  send_transaction.rb
ruby/lib/: mob.rb  native_http_transport.rb
ruby/scripts/: generate_bindings.sh
ruby/test/: test_rpc_queries.rb  test_typed_protobuf.rb
screens/: TabOneScreen.tsx  TabTwoScreen.tsx
scripts/: build-android.sh  build-ios.sh  build-react-native.sh  setup-git-hooks.sh
swift/: .gitignore  Package.swift  QUICKSTART.md  README.md  TYPED_TESTS.md
swift/Sources/Mob/: NativeHttpTransport.swift  mob.swift
swift/Tests/MobTests/: MobTests.swift  MobTypedTests.swift
swift/examples/: BasicQuery.swift  SendTransaction.swift  swift_custom_signer.swift
swift/lib/: libmob.dylib  mobFFI.h
swift/lib/libmob.xcframework/: Info.plist
swift/lib/libmob.xcframework/ios-arm64/: libmob.dylib
swift/lib/libmob.xcframework/ios-arm64/Headers/: mobFFI.h
swift/lib/libmob.xcframework/ios-arm64_x86_64-simulator/: libmob.dylib
swift/scripts/: generate_bindings.sh
typescript/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  STATUS.md  WASM_SOLUTION.md  jest.config.js  package.json  ubrn.config.yaml
typescript/wasm/: Cargo.toml
typescript/wasm/src/: lib.rs  mob_module.rs
