[package]
name = "mob"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "mob"

# For Python extension module
[package.metadata.maturin]
name = "mob"

[[bin]]
name = "uniffi-bindgen"
path = "../uniffi-bindgen.rs"

[dependencies]
# UniFFI
uniffi = { version = "0.30", features = ["cli", "tokio"] }

# Cosmos SDK
cosmos-sdk-proto = { package = "xion-cosmos-sdk-proto", version = "0.26.1", default-features = false, features = ["std", "cosmwasm", "xion", "serde"] }
cosmrs = { version = "0.22", features = ["cosmwasm", "rpc", "grpc"] }
tendermint = "0.37"
tendermint-rpc = { version = "0.37", features = ["http-client"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
bip32 = "0.5"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
ripemd = "0.1"
sha2 = "0.10"

# Utilities
hex = "0.4"
thiserror = "1"
async-trait = "0.1"
prost = "0.13"

[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }

[dev-dependencies]
tokio-test = "0.4"
