[package]
name = "mob"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "mob"

# For Python extension module
[package.metadata.maturin]
name = "mob"

[[bin]]
name = "uniffi-bindgen"
path = "../uniffi-bindgen.rs"

[features]
default = ["rpc-client", "uniffi-bindings", "rust-signer"]
# RPC client with tokio runtime - for native FFI (Python, Ruby, Kotlin, Swift)
rpc-client = ["tokio", "cosmrs/rpc", "cosmrs/grpc", "tendermint-rpc", "tonic"]
# UniFFI bindings - for Python, Ruby, Kotlin, Swift
uniffi-bindings = ["uniffi", "uniffi?/tokio"]
# Rust signer implementation - pure Rust cryptography with BIP32/BIP39 support
rust-signer = ["bip32", "k256", "ripemd", "sha2"]
# WASM-compatible - no tokio, no RPC client, no UniFFI (cryptography only)
wasm = []

[dependencies]
# UniFFI - optional, only for native FFI bindings
uniffi = { version = "0.30", features = ["cli"], optional = true }

# Cosmos SDK - always needed for types
xion-types = { path = "/tmp/xion-types-eval/rust" }
# cosmrs - make rpc and grpc optional
cosmrs = { version = "0.22", features = ["cosmwasm"], default-features = false }
tendermint = "0.37"
# tendermint-rpc - optional for WASM
tendermint-rpc = { version = "0.37", features = ["http-client"], optional = true }

# Async runtime - optional for WASM
tokio = { version = "1", features = ["full"], optional = true }

# gRPC - optional for WASM
tonic = { version = "0.12", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography - optional, only for rust-signer feature
bip32 = { version = "0.5", optional = true }
k256 = { version = "0.13", features = ["ecdsa", "sha256"], optional = true }
ripemd = { version = "0.1", optional = true }
sha2 = { version = "0.10", optional = true }

# Utilities
hex = "0.4"
thiserror = "1"
async-trait = "0.1"
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
uniffi = { version = "0.30", features = ["build"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
